---------------------------------------------------------------

INCOMPATIBLE CHANGES SINCE 2.6.x
================================

- wxFontData::GetColour() now returns a const colour
- wxDC objects can't be created directly now (this never worked, now it doesn't
  even compile)
- For all wxInputStreams, Eof() becomes true after an attempt has been made
  to read _past_ the end of file.


2.7.0
-----

All:

- wxLaunchDefaultBrowser() now supports wxBROWSER_NEW_WINDOW flag
- Added wxStringTokenizer::GetLastDelimiter(); improved documentation
- wxGetWorkingDirectory() deprecated. Use wxGetCwd() instead.
- Speed improvements to wxRegEx when matching is done in a loop such as
  during a search and replace.
- Fix regerror and regfree name conficts when built-in regex and system regex
  are both used in the same program.
- Basic authentication supported added to wxHTTP.
- wxCondition::WaitTimeout() now returns correct value when timeout occurs.
- Fixed occasional wxThread cleanup crash.
- Bug in wxLogStream::DoLogString in Unicode builds fixed.
- Added support for memo fields to wxODBC.
- Fixed Unicode builds using SunPro compiler by defining__WCHAR_TYPE__.
- wxFileName now also looks for TMPDIR on Unix.
- Fixed build error in list.h with VC++ 2005.
- Fixed wxODBC buffer overflow problem in Unicode builds.
- Fixed wxSocketBase::InterruptWait on wxBase.

All (GUI):

- Added wxTreebook (uses a wxTreeCtrl to control pages).
- Added wxKeyEvent::GetModifiers()
- Added wxDialog::SetEscapeId().
- wxItemContainerImmutable::FindString unified (affects wxRadioBox, wxListBox,
  wxComboBox and wxChoice).
- wxWindow::Fit() now works correctly for frames and dialogs too.
- Added access to the border size between pages and controller in book
  based controls (wxBookCtrlBase::Get/SetInternalBorder).
- Added initial wxRichTextCtrl implementation.
- All book based controls (notebook, treebook etc.) share now the same